# keyboards

./: .gitignore  Cargo.toml  README.md  keyboardSA.jl  profile.json
resources/: bestGenomes.txt  meinBuch.txt
src/: advanced_setup.rs  draw.rs  lib.rs  logging.rs  main.rs  models.rs  objective.rs  prelude.rs  setup.rs
src/models/: finger_list.rs  genome.rs  key_maps.rs  layout.rs  layout_map.rs  letter_list.rs
