[package]
name = "keyboards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
once_cell = "1.18.0"
plotters = "0.3.5"
plotters-backend = "0.3.5"
rand = "0.8.5"
rayon = "1.8.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release-with-debug]
inherits = "release"
debug = true
